@@ -16,6 +16,7 @@
       + static method printf : int ($stream, $format : string, $args : object[]);
       + static method read : int ($stream : Sys::IO::FileStream, $buf : mutable string, $count : int, $buf_offset : int = 0);
       + static method rewinddir : void ($dirp : Sys::IO::DirStream);
+      + static method readdir : Sys::IO::Dirent ($dirp : Sys::IO::DirStream);
       
 0.486 2023-09-06
   [Bug Fix]
